Updated banner image and fixed x overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
 
 /* Base */
-body {
+html, body {
+  max-width: 100%;
+  overflow-x:hidden;
   line-height: 1.7;
   color: gray;
   font-weight: 300;
